# eit-django

./: .gitignore  borrar.py  borrar2.py  pyproject.toml  ruff.toml
docs/: 1-proyectos-y-entornos.md  2-flujo-git.md  4-comandos-django.md
src/: db.sqlite3
src/cliente/: admin.py  models.py
src/cliente/migrations/: 0001_initial.py  0002_alter_cliente_nacimiento_alter_cliente_nombre_and_more.py
src/config/: settings.py  urls.py
src/core/: forms.py  middleware.py  models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/core/templates/core/: _index.html  about.html  base.html  cliente_list.html  dados.html  ejercicio_1.html  ejercicio_2.html  index.html  login.html  logout.html  notas.html  register.html
src/core/templates/core/componentes/: card.html  footer.html  navbar.html
src/producto/: admin.py  forms.py  models.py  urls.py  views.py
src/producto/migrations/: 0001_initial.py  0002_alter_categoria_options.py  0003_categoria_descripcion.py  0004_alter_categoria_options_producto.py  0005_vendedor.py  0006_venta.py
src/producto/templates/producto/: categoria_confirm_delete.html  categoria_detail.html  categoria_form.html  categoria_list.html  index.html  producto_confirm_delete.html  producto_detail.html  producto_form.html  producto_list.html  venta_form.html  venta_list.html
src/producto/views_models/: categoria.py  producto.py  venta.py
