[project]
name = "eit-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "django-phonenumber-field[phonenumbers]>=8.0.0",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "djhtml>=3.0.7",
    "ipython>=8.31.0",
]
